[package]
name = "kamaitachi"
version = "0.1.0"
authors = ["keiya01 <keiya.s.0210@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2"
iced_native = "0.3"
iced_graphics = "0.1"
font-kit = "0.10"
app_units = "0.7.1"
core-text = "19.0"
core-graphics = "0.22.2"
glyph_brush = "0.7.1"
ucd = "0.1.1"
core-foundation = "0.9.1"
